# surface_triangulations

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  hall_of_fame_2024-11-05_180437.920.pkl  hall_of_fame_2024-11-05_180505.127.pkl  hall_of_fame_2024-11-05_181319.236.csv.bkup  hall_of_fame_2024-11-05_181319.236.pkl  hall_of_fame_2024-11-05_181434.008.pkl  hall_of_fame_2024-11-05_181543.630.pkl  hall_of_fame_2024-11-05_181654.743.csv.bkup  hall_of_fame_2024-11-05_181654.743.pkl  hall_of_fame_2024-11-13_160848.911.csv.bkup  hall_of_fame_2024-11-13_160848.911.pkl  hall_of_fame_2024-11-13_170716.512.csv.bkup  hall_of_fame_2024-11-13_170716.512.pkl  hall_of_fame_2024-11-15_181643.058.pkl  hall_of_fame_2024-11-15_181945.697.pkl  hall_of_fame_2024-11-15_182045.964.csv.bkup  hall_of_fame_2024-11-15_182045.964.pkl  hall_of_fame_2024-11-15_182726.556.csv  hall_of_fame_2024-11-15_182726.556.pkl  hall_of_fame_2024-11-15_182842.312.csv.bkup  hall_of_fame_2024-11-15_182842.312.pkl  pyproject.toml
.github/workflows/: python-app.yaml
ai_lakatos/: conj_matrix_test.py  data_preprocessing.py  equation_to_lean_statement.py  formaliser_demo.py  interact_with_lean.py  interact_with_leandojo.py  pysr_conjecturing_agent.py  pysr_logical_demo.py
ai_lakatos/env/: lakatos_env.py
ai_lakatos/julia_snippets/: matrix_signum_loss.jl  signum_loss.jl  signum_loss.py
data_gen/: constructing_sc.py  data_visualisation.py  end_to_end_gen.py  incidence_matrix_dataset.py  random_matrices.npy  random_matrices.py  random_odd_even.npy  sc_gen_demo.py  top_mfld_check.py
data_gen/incidence_matrix_data/: cleaned_torus_incidence_matrices.npy  sphere_incidence_matrices.npy  sphere_incidence_matrices_0.npy  sphere_incidence_matrices_1.npy  sphere_incidence_matrices_2.npy  sphere_incidence_matrices_3.npy  tori_incidence_matrices.npy
lean_files/: conjecture_translation_6f36e6cf.lean  conjecture_translation_b5d65f20.lean  conjecture_translation_c3bcd79f.lean
surface_triangulations/: .gitattributes  .gitignore  README.md  __init__.py  data_preprocessing.py
(+201 files in other folders)
