[tool.poetry]
name = "ai-lakatos"
version = "0.1.0"
description = "A multi-agent AI mathematician based on Lakatos' method of proofs and refutations"
authors = ["daattavya98 <da579@cam.ac.uk>, Oisin Kim <osmk3@cam.ac.uk>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
pysr = "^0.19.4"
sympy = "^1.13.3"
scipy = "<1.14.1"
matplotlib = "<3.9.2"
pathlib = "^1.0.1"
lean-dojo = "^2.1.3"
numpy = "^2.1.3"
pettingzoo = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
