[tool.poetry]
name = "surface-triangulations"
version = "0.1.0"
description = "A pipeline for generating random triangulations of closed surfaces (spheres, tori, Klein bottles and their connected sums)"
authors = ["Daattavya Aggarwal <da579@cam.ac.uk>", "Oisin Kim <osmk3@cam.ac.uk>"]
readme = "README.md"
license = "MIT"
packages = [{include = "surface_triangulations"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
scipy = "<1.14.1"
matplotlib = "<3.9.2"
numpy = "^2.1.3"
beartype = "^0.19.0"
toponetx = "^0.1.1"
networkx = "^3.4.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
